# customer_feedback_rag-system_new

./: .gitignore  DOCUMENTATION_SUMMARY.md  QUICK_START.md  README.md  app.py  check_dates.py  clean_csv_file.py  helper_functions.py  prepare_customer_data.py  pyproject.toml  streamlit_app.py
customer_agents/: chart_creator_agent.py  customer_manager_agent.py  feedback_analysis_agent.py  metadata_analysis_agent.py  output_summarizer_agent.py  structured_models.py
customer_agents_tools/: create_charts_tool.py  get_metadata_tool.py  robust_search_tool_factory.py  search_tool.py
customer_agents_tools/chart_generators/: __init__.py  _shared.py  dealership_charts.py  market_charts.py  nps_charts.py  overview_chart.py  sentiment_charts.py  time_analysis_chart.py  topic_charts.py
db/: vectorstore.py  vectorstore_chroma.py
docs/: ARCHITECTURE.md  DEVELOPER_GUIDE.md  PRESENTATION_GUIDE.md  TEMPLATE_index.html  USER_GUIDE.md
streamlit_styles/: __init__.py  footer_styles.py  header_styles.py  layout_styles.py  sidebar_styles.py  theme_config.py
test/: __init__.py  test_questions.py
utils/: __init__.py  chart_cleanup.py  csv_loader.py  helper_functions.py  prepare_customer_data.py  simple_history.py  synthetic_data_generator.py  topic_keywords.py
